# hpcflow-new

./: .gitignore  .pre-commit-config.yaml  CHANGELOG-dev.md  CHANGELOG.md  CITATION.cff  README.md  execution_spec.md  hi.txt  pyproject.toml  remove_tags.py  requirements.txt  test  test.txt  update_main_version.py
.chglog/: config.yml
.github/: CODEOWNERS  README.md
.github/workflows/: CI-full.yml  benchmark.yml  build-exes.yml  build-exes.yml.in  bump-downstream.yml  deploy.yml  doc-build.yml  get_invoc_cmd_interactive.py  release.yml  release.yml.in  release_testing.yml  release_testing.yml.in  test-schedulers.yml  test-shells.yml  test.yml  test.yml.in  test_pre_python.yml  typecheck.yml  vars.jsonc
docs/: run_sphinx_apidoc copy.sh
docs/source/: conf.py  config.jsonc  config_app.py  installation.rst  released_binaries.yml
hpcflow/: __init__.py  _version.py  actions.py  app.py  command_files.py  config.py  core.py  errors.py  examples.ipynb  hpcflow.py  initial.py  parameters.py  runtime.py  spec_schema.py  task.py  task_schema.py  typing_stubs.py  utils.py  viz_demo.ipynb  workflow.py
hpcflow/__pyinstaller/: hook-hpcflow.py
hpcflow/api/: __init__.py  config.py
hpcflow/cli/: cli.py  config.py  utils.py
hpcflow/data/: config_file_schema.yaml  config_schema.yaml
pyinstaller/: compress.ps1  compress.sh  hook-hpcflow.cli.cli.py  hook-hpcflow.py  make.bat  make.ps1  make.sh
test/: test.sh
tests/: test_action.py  test_input_value.py  test_object_list.py  test_resolve_elements.py  test_task_schema.py  test_task_template.py  test_utils.py
(+155 files in other folders)
