
[tool.poetry]
name = "hpcflow"
version = "0.58.0a5"


description = "Computational workflow management"
authors = ["aplowman <adam.plowman@manchester.ac.uk>"]
license = "MIT"
readme = "README.md"
include = [
    "hpcflow/data/workflow_spec_schema.yaml",
    "hpcflow/data/task_schema_spec_schema.yaml",
    "hpcflow/data/environments_spec_schema.yaml"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
zarr = "^2.10.3"
"ruamel.yaml" = "^0.17.20"
click = "^8.0.4"
valida = "^0.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
ipykernel = "^6.6.1"
pytest = "^6.2.5"
commitizen = "^2.20.3"
pre-commit = "^2.16.0"
black = "^21.12b0"
pyinstaller = "^4.9"

[tool.poetry.scripts]
hpcflow = 'hpcflow.cli:cli'

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.58.0a5"
tag_format = "v$version"
version_files = [ 
    "pyproject.toml:version",
    "hpcflow/_version.py"
]
bump_message = "bump: $current_version → $new_version [skip ci]"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
